<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_login">Login Screen</string>
    <string name="app_name">Hey There</string>
    <string name="hello_world">Hello Computer</string>
    <string name="action_settings">Settings</string>
    <string name="Extra"> These are some extra strings for you to see! </string>
    <string name="Heythere_logo">Hey.There</string>
    <string name="signin"> Sign In </string>
    <string name="newacc"> Register </string>
    <string name="f">Fb</string>
    <string name="g">G+</string>
    <string name="t">t</string>
    <string name="title_activity_title_screen">titleScreen</string>
    <string name="new_account">I want to Create a new Account</string>
    <string name="exist_account">Login Using Existing account</string>
    <string name="pwd_forgot">Forgot Password?</string>
    <string name="title_activity_loginauth">Login</string>
    <string name="title_activity_logintrybg">Login</string>
    <string name="title_activity_test__land_page">Test_LandPage</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="reg_pg1">Lets Register!</string>
    <string name="reg_sub">Lets get on with Creating a new account for yourself with Hey.There! Lets start with the basic Account Info:</string>
    <string name="reg_username">Select a Username</string>
    <string name="reg_password">Enter a strong Password:</string>
    <string name="reg_pass_verify">Reverify the password:</string>
    <string name="reg_Tellus">A bit more about yourself!</string>
    <string name="reg_name">Whats your Real Name ?</string>
    <string name="reg_email">What is your Email ID?</string>
    <string name="reg_upload">Set Display Picture</string>
    <string name="reg_upload_sub">Upload an awesome Profile Display Picture</string>
    <string name="action_upload">Upload</string>
    <string name="dp_desc">Preview Of Uploaded Picture</string>
    <string name="title_activity_main_activity_screen">Home Screen</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="drawer_array">
        <item>Home</item>
        <item>Profile</item>
        <item>Carpool</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
        <item>Log Out !</item>
    </string-array>

    <string name="find">Start Search!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_nearby_list">People Nearby!</string>
    <string name="title_activity_people__profile">Profile Info</string>
    <string name="distance_text">Current Distance:</string>
    <string name="connect">Lets Connect!</string>
    <string name="open">Open!</string>
    <string name="close">Close! Connect!</string>
    <string name="setrange">Set the search radius!</string>
    <string name="setrange_explain">Determine how far shoud we search for people! (Max:  10 Km)</string>
    <string name="range_set">0 Km</string>
    <string name="user_err">Bummer! It seems the user name you have entered is alredy taken! try another name. </string>
    <string name="title_activity_self_profile">SelfProfile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="town">Current Address</string>
    <string name="nil">-</string>


</resources>
