<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:padding="8dp"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="438dp"
        android:orientation="vertical"
        android:weightSum="1">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView5"
            android:text="@string/reg_upload" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reg_upload_sub"
            android:id="@+id/textView4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:id="@+id/dp_preview"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dp"
            android:contentDescription="@string/dp_desc" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_btn"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="false"
            android:text="@string/action_upload"
            android:onClick="uploadDP"/>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_finish"
        android:id="@+id/finish_reg"
        android:layout_gravity="right|bottom"
        android:onClick="finishPage"

        />

</FrameLayout>