<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:padding="5dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="427dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/reg_pg1"
                android:id="@+id/textView"
                android:gravity="center|left"
                android:textSize="40sp"
                android:textIsSelectable="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/reg_sub"
                android:id="@+id/textView5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reg_username"
                android:id="@+id/text_username"
                android:layout_weight="0.08" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/new_username"

                android:background="@android:color/darker_gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reg_password"
                android:id="@+id/textView3"
                android:layout_weight="0.08" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/new_password"
                android:layout_weight="0.08"
                android:textSize="20sp"
                android:background="@android:color/darker_gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reg_pass_verify"
                android:id="@+id/textView2"
                android:layout_weight="0.08" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_weight="0.08"
                android:textSize="20sp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        android:id="@+id/next"
        android:layout_gravity="right|bottom"
        />

</FrameLayout>